--- a/proj1/src/css/style.css
+++ b/proj1/src/css/style.css
@@ -1,7 +1,165 @@
-body {
-	background-color: khaki;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-.italic {
-	font-style: italic;
+.container {
+	width: 1140px;
+	margin: 0 auto;
+}
+
+.promo {
+	height: 800px;
+	background: url('../img/bg/main_bg.jpg') center center/cover no-repeat;
+	padding: 40px 0 60px 0;
+}
+
+.logo .logo_img {
+	display: block;
+	margin: 0 auto;
+}
+
+.logo .logo_text {
+	color: white;
+	font-family: Roboto;
+	font-weight: 500;
+	font-size: 15px;
+	text-align: center;
+	text-transform: uppercase;
+	margin-top: 14px;
+}
+
+h1 {
+	margin-top: 50px;
+}
+
+.title {
+	font-family: Roboto-Black;
+	font-weight: 900;
+	font-size: 41px;
+	text-align: center;
+	text-transform: uppercase;
+	color: #f9bf3b;
+}
+
+h2.title {
+	margin-top: 20px;
+}
+
+.simple .title_big {
+	font-family: Roboto-Black;
+	font-weight: 900;
+	font-size: 80px;
+	text-align: center;
+	text-transform: uppercase;
+	color: #ffffff;
+	margin-top: 21px;
+}
+
+.promo .promo_text {
+	font-family: Roboto;
+	font-weight: 300;
+	font-size: 21px;
+	line-height: 28px;
+	text-align: center;
+	color: #ffffff;
+	margin-top: 20px;
+}
+
+.promo .promo_text span {
+	font-family: Roboto-Bold;
+	font-weight: 700;
+	color: #f9bf3b;
+}
+
+.promo .promo_btn {
+	display: block;
+	margin: 0 auto;
+	margin-top: 70px;
+	width: 313px;
+	height: 72px;
+	box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
+	border: 4px solid rgba(0, 0, 0, 0.23);
+	background: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
+	font-family: Roboto;
+	font-size: 21px;
+	text-align: center;
+	text-transform: uppercase;
+	color: #ffffff;
+	text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.22);
+	cursor: pointer;
+	outline: none;
+}
+
+.more .more_text {
+	font-family: Roboto-Thin;
+	font-weight: 200;
+	font-size: 15px;
+	text-align: center;
+	text-transform: uppercase;
+	color: #ffffff;
+	margin-top: 70px;
+}
+
+.more .more_img {
+	display: block;
+	margin: 0 auto;
+	margin-top: 10px;
+}
+
+.waiting {
+	height: 607px;
+	background: #efefef;
+	padding: 85px 0 75px 0;
+}
+
+.waiting .waiting_header {
+	font-family: Roboto;
+	font-size: 30px;
+	font-weight: 400;
+	text-align: center;
+	text-transform: uppercase;
+	color: #252525;
+}
+
+.waiting .waiting_divider {
+	margin: 0 auto;
+	margin-top: 18px;
+	width: 220px;
+	height: 7px;
+	background: #f9bf3b;
+}
+
+.waiting .waiting_subheader {
+	font-family: Roboto;
+	font-size: 23px;
+	text-align: center;
+	color: #4a4a4a;
+	margin-top: 18px;
+}
+
+.waiting .waiting_wrapper {
+	margin-top: 45px;
+}
+
+.waiting .waiting_wrapper .waiting_item {
+	display: inline-block;
+	text-align: center;
+	margin: 0 15px;
+	vertical-align: top;
+	width: 339px;
+}
+
+.waiting .waiting_wrapper .waiting_item .waiting_img {
+	width: 100%;
+}
+
+.waiting .waiting_wrapper .waiting_item .waiting_descr {
+	margin-top: 26px;
+	font-family: Roboto;
+	font-weight: 300;
+	font-size: 15px;
+	line-height: 21px;
+	color: #4a4a4a;
 }
