--- a/proj1/src/css/style.css
+++ b/proj1/src/css/style.css
@@ -140,14 +140,13 @@ h2.title {
 }
 
 .waiting .waiting_wrapper {
+	display: flex;
+	justify-content: space-between;
 	margin-top: 45px;
 }
 
 .waiting .waiting_wrapper .waiting_item {
-	display: inline-block;
 	text-align: center;
-	margin: 0 15px;
-	vertical-align: top;
 	width: 339px;
 }
 
@@ -162,4 +161,4 @@ h2.title {
 	font-size: 15px;
 	line-height: 21px;
 	color: #4a4a4a;
-} 
+}
