--- a/proj1/src/css/style.css
+++ b/proj1/src/css/style.css
@@ -5,6 +5,7 @@
 }
 
 .container {
+	position: relative;
 	width: 1140px;
 	margin: 0 auto;
 }
@@ -109,12 +110,13 @@ h2.title {
 }
 
 .waiting {
-	height: 607px;
+	min-height: 600px;
 	background: #efefef;
 	padding: 85px 0 75px 0;
 }
 
-.waiting .waiting_header {
+.waiting .waiting_header,
+.finish .finish_header {
 	font-family: Roboto;
 	font-size: 30px;
 	font-weight: 400;
@@ -123,7 +125,12 @@ h2.title {
 	color: #252525;
 }
 
-.waiting .waiting_divider {
+.finish .finish_header {
+	color: #efefef;
+}
+
+.waiting .waiting_divider,
+.finish .finish_divider {
 	margin: 0 auto;
 	margin-top: 18px;
 	width: 220px;
@@ -161,4 +168,76 @@ h2.title {
 	font-size: 15px;
 	line-height: 21px;
 	color: #4a4a4a;
+}
+
+.optimization {
+	min-height: 550px;
+	padding: 100px 0 100px 0;
+}
+
+.optimization .optimization_title {
+	margin-left: 390px;
+	font-family: Roboto;
+	font-weight: 900;
+	font-size: 27px;
+	text-transform: uppercase;
+	color: #299cbd;
+}
+
+.optimization .optimization_text {
+	margin-left: 390px;
+	margin-top: 25px;
+	font-family: Roboto;
+	font-weight: 300;
+	font-size: 17px;
+	line-height: 27px;
+	color: #4a4a4a;
+}
+
+.optimization .optimization_text span {
+	font-weight: bold;
+}
+
+.optimization .optimization_img {
+	position: absolute;
+	top: -45px;
+	left: -240px;
+	z-index: -1;
+}
+
+.finish {
+	min-height: 445px;
+	background: url(../img/bg/second_bg.jpg) center center/cover no-repeat;
+	padding: 85px 0 70px 0;
+}
+
+.finish .finish_wrapper {
+	margin-top: 40px;
+	display: flex;
+	justify-content: space-around;
+}
+
+.finish .finish_wrapper .finish_item {
+	width: 235px;
+}
+
+.finish .finish_wrapper .finish_item .finish_round {
+	display: flex;
+	justify-content: center;
+	margin: 0 auto;
+	align-items: center;
+	width: 115px;
+	height: 115px;
+	background: #b4e2ff;
+	border-radius: 100%;
+}
+
+.finish .finish_wrapper .finish_item .finish_descr {
+	margin-top: 25px;
+	font-family: Roboto;
+	font-weight: 300;
+	font-size: 17px;
+	line-height: 20px;
+	color: #efefef;
+	text-align: center;
 }
