--- a/proj1/src/css/style.css
+++ b/proj1/src/css/style.css
@@ -74,7 +74,8 @@ h2.title {
 	color: #f9bf3b;
 }
 
-.promo .promo_btn {
+.promo .promo_btn,
+.gift .gift_btn {
 	display: block;
 	margin: 0 auto;
 	margin-top: 70px;
@@ -240,4 +241,28 @@ h2.title {
 	line-height: 20px;
 	color: #efefef;
 	text-align: center;
+}
+
+.gift {
+	min-height: 630px;
+	background-color: #efefef;
+	padding: 85px 0;
+}
+
+.gift .gift_img {
+	display: block;
+	margin: 0 auto;
+}
+
+.gift .gift_text {
+	margin-top: 45px;
+	width: 1160px;
+	font-family: Roboto;
+	font-size: 30px;
+	line-height: 43px;
+	color: #252525;
+}
+
+.gift .gift_btn {
+	margin-top: 50px 0 0 0;
 }
