--- a/proj1/src/css/style.css
+++ b/proj1/src/css/style.css
@@ -267,7 +267,70 @@ h2.title {
 	margin-top: 50px 0 0 0;
 }
 
+.first {
+	padding: 90px 0 50px 0;
+}
+
 .first .first_img {
 	display: block;
 	margin: 0 auto;
+}
+
+.first .first_text {
+	font-family: Roboto;
+	font-size: 30px;
+	line-height: 30px;
+	text-transform: uppercase;
+	color: #252525;
+	margin-top: 36px;
+	text-align: center;
+}
+
+.first .date {
+	font-family: Roboto;
+	font-weight: 900;
+	font-size: 36px;
+	line-height: 36px;
+	text-transform: uppercase;
+	color: #299cbd;
+	margin-top: 30px;
+	text-align: center;
+}
+
+.first .first_subtitle {
+	font-family: Roboto;
+	font-size: 23px;
+	line-height: 20px;
+	color: #4a4a4a;
+	margin-top: 25px;
+	text-align: center;
+}
+
+footer {
+	padding: 55px 0 70px 0;
+	background: #1a1a1a;
+}
+
+.info {
+	margin: 0 auto;
+	width: 377px;
+	text-align: center;
+	color: #888888;
+	font-family: Roboto;
+	font-size: 15px;
+	font-weight: 300;
+	line-height: 21px;
+}
+
+footer a {
+	color: #888888;
+	font-family: Roboto;
+	font-size: 15px;
+	font-weight: 300;
+	line-height: 21px;
+	text-decoration: none;
+}
+
+.underlined {
+    text-decoration: underline;
 }
