--- a/proj1/src/css/style.css
+++ b/proj1/src/css/style.css
@@ -4,331 +4,337 @@
 	padding: 0;
 }
 
+html {
+	font-family: 'Roboto', sans-serif;
+}
+
 .container {
-	position: relative;
-	width: 1140px;
-	margin: 0 auto;
+    position: relative;
+    width: 1140px;
+    margin: 0 auto;
 }
 
 .promo {
-	height: 800px;
-	background: url('../img/bg/main_bg.jpg') center center/cover no-repeat;
-	padding: 40px 0 60px 0;
+    min-height: 800px;
+    background: url('../img/bg/main_bg.jpg') center center/cover no-repeat;
+    padding: 39px 0 62px 0;
 }
 
 .logo .logo_img {
-	display: block;
-	margin: 0 auto;
+    display: block;
+    margin: 0 auto;
 }
 
 .logo .logo_text {
-	color: white;
-	font-family: Roboto;
-	font-weight: 500;
-	font-size: 15px;
-	text-align: center;
-	text-transform: uppercase;
-	margin-top: 14px;
+    color: #ffffff;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 24px;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 14px;
 }
 
 h1 {
-	margin-top: 50px;
+    margin-top: 53px;
 }
-
 .title {
-	font-family: Roboto-Black;
-	font-weight: 900;
-	font-size: 41px;
-	text-align: center;
-	text-transform: uppercase;
-	color: #f9bf3b;
+    color: #f9bf3b;
+    font-family: "Roboto - Black";
+    font-size: 41px;
+    font-weight: 900;
+    line-height: 24px;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 h2.title {
-	margin-top: 20px;
+    margin-top: 30px;
 }
 
 .simple .title_big {
-	font-family: Roboto-Black;
-	font-weight: 900;
-	font-size: 80px;
-	text-align: center;
-	text-transform: uppercase;
-	color: #ffffff;
-	margin-top: 21px;
+    color: #ffffff;
+    font-size: 80px;
+    font-weight: 900;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 21px;
 }
 
 .promo .promo_text {
-	font-family: Roboto;
-	font-weight: 300;
-	font-size: 21px;
-	line-height: 28px;
-	text-align: center;
-	color: #ffffff;
-	margin-top: 20px;
+    padding: 0 13px;
+    margin-top: 23px;
+    color: #ffffff;
+    font-size: 21px;
+    font-weight: 300;
+    line-height: 28px;
+    font-weight: 300;
+    text-align: center;
 }
 
 .promo .promo_text span {
-	font-family: Roboto-Bold;
-	font-weight: 700;
-	color: #f9bf3b;
+    color: #f9bf3b;
+    font-weight: 700;
 }
 
-.promo .promo_btn,
+.promo .promo_btn, .gift .gift_btn {
+    display: block;
+    margin: 0px auto;
+    margin-top: 73px;
+    width: 313px;
+    height: 72px;
+    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
+    border: 4px solid rgba(0, 0, 0, 0.23);
+    background-image: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
+    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.22);
+    color: #ffffff;
+    font-family: "Roboto Condensed";
+    font-size: 21px;
+    font-weight: 400;
+    line-height: 24px;
+    text-transform: uppercase;
+    cursor: pointer;
+    outline: none;
+}
+
 .gift .gift_btn {
-	display: block;
-	margin: 0 auto;
-	margin-top: 70px;
-	width: 313px;
-	height: 72px;
-	box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
-	border: 4px solid rgba(0, 0, 0, 0.23);
-	background: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
-	font-family: Roboto;
-	font-size: 21px;
-	text-align: center;
-	text-transform: uppercase;
-	color: #ffffff;
-	text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.22);
-	cursor: pointer;
-	outline: none;
+    margin-top: 52px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    border: none;
+}
+
+.more {
+    margin-top: 73px;
 }
 
 .more .more_text {
-	font-family: Roboto-Thin;
-	font-weight: 200;
-	font-size: 15px;
-	text-align: center;
-	text-transform: uppercase;
-	color: #ffffff;
-	margin-top: 70px;
+    color: #ffffff;
+    font-family: "Roboto - Thin";
+    font-size: 15px;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 .more .more_img {
-	display: block;
-	margin: 0 auto;
-	margin-top: 10px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 13px;
 }
 
 .waiting {
-	min-height: 600px;
-	background: #efefef;
-	padding: 85px 0 75px 0;
+    min-height: 604px;
+    background-color: #efefef;
+    padding: 85px 0 75px 0;
 }
 
-.waiting .waiting_header,
+.waiting .waiting_header, .finish .finish_header {
+    color: #252525;
+    font-family: Roboto;
+    font-size: 30px;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-align: center;
+}
 .finish .finish_header {
-	font-family: Roboto;
-	font-size: 30px;
-	font-weight: 400;
-	text-align: center;
-	text-transform: uppercase;
-	color: #252525;
+    color: #fff;
 }
 
-.finish .finish_header {
-	color: #efefef;
-}
-
-.waiting .waiting_divider,
-.finish .finish_divider {
-	margin: 0 auto;
-	margin-top: 18px;
-	width: 220px;
-	height: 7px;
-	background: #f9bf3b;
+.waiting .waiting_divider, .finish .finish_divider {
+    width: 217px;
+    height: 4px;
+    background-color: #f9bf3b;
+    margin: 0 auto;
+    margin-top: 18px;
 }
 
 .waiting .waiting_subheader {
-	font-family: Roboto;
-	font-size: 23px;
-	text-align: center;
-	color: #4a4a4a;
-	margin-top: 18px;
+    margin-top: 17px;
+    color: #4a4a4a;
+    font-family: Roboto;
+    font-size: 23px;
+    font-weight: 400;
+    text-align: center;
 }
 
 .waiting .waiting_wrapper {
-	display: flex;
-	justify-content: space-between;
-	margin-top: 45px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 45px;
 }
 
 .waiting .waiting_wrapper .waiting_item {
-	text-align: center;
-	width: 339px;
+    width: 339px;
+    text-align: center;
 }
-
 .waiting .waiting_wrapper .waiting_item .waiting_img {
-	width: 100%;
+    width: 100%;
 }
 
 .waiting .waiting_wrapper .waiting_item .waiting_descr {
-	margin-top: 26px;
-	font-family: Roboto;
-	font-weight: 300;
-	font-size: 15px;
-	line-height: 21px;
-	color: #4a4a4a;
+    margin-top: 33px;
+    color: #4a4a4a;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 21px;
 }
 
 .optimization {
-	min-height: 550px;
-	padding: 100px 0 100px 0;
+    min-height: 550px;
+    padding: 102px 0 107px 0;
 }
 
 .optimization .optimization_title {
-	margin-left: 390px;
-	font-family: Roboto;
-	font-weight: 900;
-	font-size: 27px;
-	text-transform: uppercase;
-	color: #299cbd;
+    margin-left: 391px;
+    color: #299cbd;
+    font-family: "Roboto - Black";
+    font-size: 29px;
+    font-weight: 400;
+    text-transform: uppercase;
 }
 
 .optimization .optimization_text {
-	margin-left: 390px;
-	margin-top: 25px;
-	font-family: Roboto;
-	font-weight: 300;
-	font-size: 17px;
-	line-height: 27px;
-	color: #4a4a4a;
+    margin-top: 25px;
+    margin-left: 391px;
+    color: #4a4a4a;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 27px;
+    font-family: "Roboto Light";
+    font-weight: 300;
 }
-
 .optimization .optimization_text span {
-	font-weight: bold;
+    font-family: "Roboto - Bold";
+    font-weight: 700;
 }
 
 .optimization .optimization_img {
-	position: absolute;
-	top: -45px;
-	left: -240px;
-	z-index: -1;
+    position: absolute;
+    top: -54px;
+    left: -240px;
+    z-index: -1;
 }
 
 .finish {
-	min-height: 445px;
-	background: url(../img/bg/second_bg.jpg) center center/cover no-repeat;
-	padding: 85px 0 70px 0;
+    min-height: 447px;
+    padding: 86px 0 79px 0;
+    background: url('../img/bg/second_bg.jpg') center center/cover no-repeat;
 }
-
 .finish .finish_wrapper {
-	margin-top: 40px;
-	display: flex;
-	justify-content: space-around;
+    margin-top: 41px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .finish .finish_wrapper .finish_item {
-	width: 235px;
+    width: 204px;
 }
 
 .finish .finish_wrapper .finish_item .finish_round {
-	display: flex;
-	justify-content: center;
-	margin: 0 auto;
-	align-items: center;
-	width: 115px;
-	height: 115px;
-	background: #b4e2ff;
-	border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 115px;
+    height: 115px;
+    background-color: #b4e2ff;
+    border-radius: 100%;
 }
 
 .finish .finish_wrapper .finish_item .finish_descr {
-	margin-top: 25px;
-	font-family: Roboto;
-	font-weight: 300;
-	font-size: 17px;
-	line-height: 20px;
-	color: #efefef;
-	text-align: center;
+    margin-top: 25px;
+    text-align: center;
+    color: #efefef;
+    font-family: Roboto;
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 20px;
 }
 
 .gift {
-	min-height: 630px;
-	background-color: #efefef;
-	padding: 85px 0;
+    min-height: 628px;
+    padding: 86px 0 87px 0;
+    background-color: #efefef;
 }
 
 .gift .gift_img {
-	display: block;
-	margin: 0 auto;
+    display: block;
+    margin: 0 auto;
 }
 
 .gift .gift_text {
-	margin-top: 45px;
-	width: 1160px;
-	font-family: Roboto;
-	font-size: 30px;
-	line-height: 43px;
-	color: #252525;
-}
-
-.gift .gift_btn {
-	margin-top: 50px 0 0 0;
+    margin-top: 42px;
+    color: #252525;
+    font-family: 'Roboto';
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 43px;
+    text-align: center;
 }
 
 .first {
-	padding: 90px 0 50px 0;
+    min-height: 515px;
+    padding: 89px 0 64px 0;
 }
 
 .first .first_img {
-	display: block;
-	margin: 0 auto;
+    display: block;
+    margin: 0 auto;
 }
 
 .first .first_text {
-	font-family: Roboto;
-	font-size: 30px;
-	line-height: 30px;
-	text-transform: uppercase;
-	color: #252525;
-	margin-top: 36px;
-	text-align: center;
+    margin-top: 37px;
+    color: #252525;
+    font-family: Roboto;
+    font-size: 30px;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 .first .date {
-	font-family: Roboto;
-	font-weight: 900;
-	font-size: 36px;
-	line-height: 36px;
-	text-transform: uppercase;
-	color: #299cbd;
-	margin-top: 30px;
-	text-align: center;
+    margin-top: 30px;
+    color: #299cbd;
+    font-size: 36px;
+    font-weight: 900;
+    text-transform: uppercase;
+    text-align: center;
 }
 
-.first .first_subtitle {
-	font-family: Roboto;
-	font-size: 23px;
-	line-height: 20px;
-	color: #4a4a4a;
-	margin-top: 25px;
-	text-align: center;
+.first .first_subtitle{
+    margin-top: 25px;
+    color: #4a4a4a;
+    font-size: 23px;
+    font-weight: 400;
+    text-align: center;
 }
 
 footer {
-	padding: 55px 0 70px 0;
-	background: #1a1a1a;
+    min-height: 166px;
+    background-color: #1a1a1a;
+    padding: 61px 0 69px 0;
 }
 
 .info {
-	margin: 0 auto;
-	width: 377px;
-	text-align: center;
-	color: #888888;
-	font-family: Roboto;
-	font-size: 15px;
-	font-weight: 300;
-	line-height: 21px;
+    margin: 0 auto;
+    width: 377px;
+    text-align: center;
+    color: #888888;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 21px;
 }
 
 footer a {
-	color: #888888;
-	font-family: Roboto;
-	font-size: 15px;
-	font-weight: 300;
-	line-height: 21px;
-	text-decoration: none;
+    color: #888888;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 21px;
+    text-decoration: none;
 }
 
 .underlined {
